test/patterns_bak/s0496_next_greater_element_i/hafis/starchat/jml_syntax_checking.txt
./test/s0496_next_greater_element_i/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums2.length; ((nums2 <= 10000) && (nums2 >= 0)));
                                                           ^
  first type:  int[]
  second type: int
./test/s0496_next_greater_element_i/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums2.length; ((nums2 <= 10000) && (nums2 >= 0)));
                                                                               ^
  first type:  int[]
  second type: int
./test/s0496_next_greater_element_i/hafis/starchat/Solution.java:15: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums1.length; ((nums1 <= 10000) && (nums1 >= 0)));
                                                           ^
  first type:  int[]
  second type: int
./test/s0496_next_greater_element_i/hafis/starchat/Solution.java:15: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums1.length; ((nums1 <= 10000) && (nums1 >= 0)));
                                                                               ^
  first type:  int[]
  second type: int
4 errors
